# sneding_image_rust

./: Cargo.toml
src/: client.rs  server.rs
